2007-04-17  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/gqbist.c: applied slightly modified patch from
	Aurimas Juška which adds an undo button to go back to the previous
	state. Fixes bug #356662.

2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/Makefile.am: use GTK_CFLAGS and GTK_LIBS.

2007-04-16  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: documentation fix.

2007-04-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcellrendereraccel.[ch]: remove
	GimpCellRendererAccel.

	* app/widgets/gimpactionview.c: use GtkCellRendererAccel instead.
	If an action has no label, use its name as label. Always show the
	"Name" column because there are too many actions with confusingly
	similar names.

2007-04-16  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in
	* app/gui/gui.c (gui_sanity_check): require gtk+ >= 2.10.6.

2007-04-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/Lighting/lighting_ui.c: applied patch from Aurimas
	Juška that fixes sensitivity of input fields related to the light
	type (bug #359833).

2007-04-13  Michael Natterer  <mitch@gimp.org>

	* app/base/base-types.h
	* app/base/temp-buf.[ch]: remove redundant and inconsistently used
	MaskBuf type and API.

	* app/core/gimpbrush-scale.c
	* app/paint/gimpbrushcore.[ch]: use TempBuf and its API instead.
	This also optimizes away a useless memset() on brush scaling,
	we completely fill each of the created buffers anyway.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleselecttool.c: implement
	GimpTool::key_press and delegate to the rectangle tool or the edit
	selection tool. This resurrects positioning of floating selections
	with the cursor keys.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/display.pdb (display_delete): added a note that
	calling this function may cause data loss.

	* app/pdb/display_cmds.c
	* libgimp/gimpdisplay_pdb.c: regenerated.
